# zed-chat

./: Cargo.toml  IMPLEMENTATION.md
crates/zed-chat/: Cargo.toml  INTEGRATION.md  README.md
crates/zed-chat/src/: main.rs  zed.rs  zed_base.rs
crates/zed-chat/src/zed/: app_menus.rs  open_listener.rs
