[package]
name = "zed-chat"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
description = "Standalone agent chat application built with GPUI"

[lints]
workspace = true

[[bin]]
name = "zed-chat"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
assets.workspace = true
gpui = { workspace = true, features = ["wayland", "x11", "font-kit"] }
log.workspace = true
reqwest_client.workspace = true
settings.workspace = true
simplelog.workspace = true
theme.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
